# breakoutc

./: .gitignore  .gitmodules  CMakeLists.txt  buildlibs.sh  readme.md
.cache/clangd/index/: BallObject-private.h.73D77C7474950C64.idx  BallObject-private.h.A511B3548B9ABB39.idx  BallObject.c.2A8B254A77651A21.idx  BallObject.c.3DA144046D682345.idx  BallObject.h.8DFD068FD2645645.idx  BallObject.h.DE6CDC35507CB664.idx  CFArray.c.0B281ABA1C7B5F4E.idx  CFArray.h.5EB27180A632BA51.idx  CFBag.c.4052C4AD93E256DB.idx  CFBag.h.C494A852797C244D.idx  CFBitVector.c.60FA93B98A617219.idx  CFBitVector.h.36BC9C382B0F593F.idx  CFBool.c.B2D5AB717C35D7F9.idx  CFBool.h.3007D2C1370798F9.idx  CFBox.c.29C8F18E39B26D96.idx  CFBox.h.874D7B3C15A18927.idx  CFClass.c.5D15DC7595DBE96C.idx  CFClass.h.BB44BFE1163A977A.idx  CFDouble.c.6C653DC2480FBA54.idx  CFDouble.h.CB24D4DA9717F1B7.idx  CFHash.h.391932671DCD7736.idx  (+160 more)
include/: BallObject.h  Breakout.h  Collision.h  Demo.h  GameLevel.h  GameObject.h  Particle.h  ParticleGenerator.h
include/corefw/: array.h  bool.h  box.h  class.h  double.h  file.h  int.h  map.h  object.h  refpool.h  stream.h  string.h  tcpsocket.h
include/demo/: BallObject-private.h  BallObject.h  Collision.h  Demo-private.h  Demo.h  GameLevel-private.h  GameLevel.h  GameObject-private.h  GameObject.h  Particle.h  ParticleGenerator-private.h  ParticleGenerator.h
libs/CF/: CMakeLists.txt
libs/cfw/: CMakeLists.txt  readme.md
libs/corefw/: CMakeLists.txt
src/: BallObject.c  Collision.c  Demo.c  GameLevel.c  GameObject.c  Particle.c  ParticleGenerator.c  main.c
(+116 files in other folders)
